// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumbs> renders 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
/>
`;

exports[`<Breadcrumbs> when {color} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#10c0bc",
          "marginRight": 4,
        },
      ]
    }
  >
    Spain ·
  </Text>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#10c0bc",
          "marginRight": 4,
        },
      ]
    }
  >
    Basque Country ·
  </Text>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#10c0bc",
          "marginRight": 4,
        },
      ]
    }
  >
    Bilbao
  </Text>
</View>
`;

exports[`<Breadcrumbs> when {dataSource} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#4a4a4a",
          "marginRight": 4,
        },
      ]
    }
  >
    Spain ·
  </Text>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#4a4a4a",
          "marginRight": 4,
        },
      ]
    }
  >
    Basque Country ·
  </Text>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "color": "#4a4a4a",
          "marginRight": 4,
        },
      ]
    }
  >
    Bilbao
  </Text>
</View>
`;

exports[`<Breadcrumbs> when {style} 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "flexDirection": "row",
    }
  }
>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "color": "#4a4a4a",
          "fontSize": 16,
          "marginRight": 4,
          "padding": 16,
        },
      ]
    }
  >
    Spain ·
  </Text>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "color": "#4a4a4a",
          "fontSize": 16,
          "marginRight": 4,
          "padding": 16,
        },
      ]
    }
  >
    Basque Country ·
  </Text>
  <Text
    accessibilityRole="link"
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    href="/"
    numberOfLines={undefined}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onPress={[Function]}
    style={
      Array [
        Object {
          "color": "#4a4a4a",
          "fontFamily": undefined,
        },
        false,
        false,
        false,
        false,
        Object {
          "fontSize": 16,
          "lineHeight": 20.8,
        },
        false,
        Object {
          "fontSize": 14,
          "lineHeight": 16.8,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        Object {
          "backgroundColor": "rgba(0,0,0,0.25)",
          "color": "#4a4a4a",
          "fontSize": 16,
          "marginRight": 4,
          "padding": 16,
        },
      ]
    }
  >
    Bilbao
  </Text>
</View>
`;
